manifest/objects/ALTF__Relationships_Filter__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Relationship__c</fullName>
        <label>Account Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Adaptability__c</fullName>
        <label>Adaptability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Innovator</fullName>
                </value>
                <value>
                    <fullName>Visionary</fullName>
                </value>
                <value>
                    <fullName>Pragmatist</fullName>
                </value>
                <value>
                    <fullName>Conservative</fullName>
                </value>
                <value>
                    <fullName>Laggard</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Buyer_Role__c</fullName>
        <label>Buyer Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Maker and Approver</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Approver</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Coverage__c</fullName>
        <label>Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-depth</fullName>
                </value>
                <value>
                    <fullName>Multiple contacts</fullName>
                </value>
                <value>
                    <fullName>Brief contact</fullName>
                </value>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Decision_Orientation__c</fullName>
        <label>Decision Orientation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Department__c</fullName>
        <label>Department</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__External_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Field_API_Name_10__c</fullName>
        <label>Field API Name 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Field_API_Name_11__c</fullName>
        <label>Field API Name 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Field_API_Name_12__c</fullName>
        <label>Field API Name 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Has_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Has_Overdue_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Overdue Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__IsPublic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPublic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Object_API_Name_10__c</fullName>
        <label>Object API Name 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Object_API_Name_11__c</fullName>
        <label>Object API Name 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Object_API_Name_12__c</fullName>
        <label>Object API Name 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Owner__c</fullName>
        <label>Owner</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Political__c</fullName>
        <label>Political</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inner Circle</fullName>
                </value>
                <value>
                    <fullName>Political Structure</fullName>
                </value>
                <value>
                    <fullName>Outside Political Structure</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__ReportsTo__c</fullName>
        <label>ReportsTo</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Status__c</fullName>
        <label>Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mentor</fullName>
                </value>
                <value>
                    <fullName>Supporter</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Non-Supporter</fullName>
                </value>
                <value>
                    <fullName>Enemy</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Value_10__c</fullName>
        <label>Value 10</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Value_11__c</fullName>
        <label>Value 11</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Value_12__c</fullName>
        <label>Value 12</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__With_Insights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>With Insights</label>
        <type>Checkbox</type>
    </fields>
    <label>Altify Relationships Filter</label>
    <nameField>
        <label>Relationship Map Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Relationships Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>